--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/kyle-mcr/onTheSpot#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "request": "^2.88.0"
   }
 }
